# open_flexzl

./: .gitignore  Cargo.toml  README.md  plan.md
.github/workflows/: rust.yml
.gsd/: notifications.jsonl
benches/: compression.rs
docs/: compressor.md
src/: constants.rs  delta.rs  error.rs  field_lz.rs  frame.rs  lib.rs  literal_dict.rs  transpose.rs  varint.rs  zstd_codec.rs
test_data/: all_unique.uncomp  bursty_mid_dictionary.uncomp  hot_head_dictionary.uncomp  mostly_unique_wide_tail.uncomp  single_symbol_floods.uncomp  wide_tail.uncomp
tests/: golden.rs  map_validation.rs  properties.rs  real_world.rs
tests/common/: datasets.rs  mod.rs
