[package]
name = "open_flexzl"
version = "0.1.0"
edition = "2021"
description = "Rust-native fixed-width numeric compression inspired by OpenZL, initially focused on u32."

[dependencies]
thiserror = "2"
zstd = { version = "0.13", features = ["experimental"] }

[dev-dependencies]
proptest = "1"
binggan = "0.17"
rust-openzl = "0.1"

[[bench]]
name = "compression"
harness = false
